syntax = "proto3";

package duelingfundamentals;

// The service definition.
service WandService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc CastSpell (SpellRequest) returns (SpellReply) {}

  rpc WandMove (WandMoveRequest) returns (WandMoveReply) {}
}

message SpellRequest {
  string name = 1;
  string wand = 2;
}

message WandMoveRequest {
  string wand = 1;
  Position position = 2;
  bool isButtonPressed = 3;
}

message WandMoveReply {
    string message = 1;
}

message Position {
  double x = 1;
  double y = 2;
}

message SpellReply {
  string message = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}